atualizando front edn

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,5 +1,5 @@
 NODE_ENV=production
-BACKEND_URL=https://back.seudominio.com.br
+BACKEND_URL=https://backend-wspro.agenciatecnet.com.br
 FRONTEND_URL=https://front.seudominio.com.br
 PROXY_PORT=443
 PORT=8080
